--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="icon" href="favicon.ico">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="css/animate.css">
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="scripts/wow.min.js"></script>
-        <script>
-            new WOW().init();
-        </script>
-        <title>Sutton Electrical Services</title>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scripts/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <title>Sutton Electrical Services</title>
+</head>
+
+<body>
 
 <header class="header-area">
     <nav class="navbar navbar-expand-md navbar-dark">
@@ -79,147 +80,147 @@
     </div>
 </header>
 
-        <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
+<img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
 
-        <div class="container" id="aboutus">
+<div class="container" id="aboutus">
+    <div class="row">
+        <div class="card text-center aboutbundy col-12">
+            <div class="card-header mainabout">
+                Sutton Electrical Services
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Serving you better, everyday</h5>
+                <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work.
+                    <br><br>
+                Doing loads of stuff just for you and generally just being really great at what he does etc.
+                </p>
+                <a href="contact.html" class="btn button-primary">Contact</a>
+            </div>
+        </div>
+
+        <!-- Coronavirus notice -->
+        <div class="container cvnotice d-flex justify-content-center">
             <div class="row">
-                <div class="card text-center aboutbundy col-12">
-                    <div class="card-header mainabout">
-                        Sutton Electrical Services
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Serving you better, everyday</h5>
-                        <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
-                        <a href="contact.html" class="btn button-primary">Contact</a>
-                    </div>
-                </div>
-
-                <!-- Coronavirus notice -->
-                <div class="container cvnotice d-flex justify-content-center">
-                    <div class="row">
-                        <div class="col">
-                            <p>
-                                <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    Coronavirus notice
-                                </button>
-                            </p>
-                            <div class="collapse" id="collapseExample">
-                                <div class="card card-body">
-                                    <strong>We do everything we can to work and operate in a safe environment, this includes;</strong>
-                                    <ul class="list-group">
-                                        <li class="list-group-item">Doing this</li>
-                                        <li class="list-group-item">Doing that</li>
-                                        <li class="list-group-item">Doing something else</li>
-                                        <li class="list-group-item">And even other stuff</li>
-                                    </ul>
-                                </div>
-                            </div>
+                <div class="col">
+                    <p>
+                        <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                            Coronavirus notice
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                            <strong>We do everything we can to work and operate in a safe environment, this includes;</strong>
+                            <ul class="list-group">
+                                <li class="list-group-item">Doing this</li>
+                                <li class="list-group-item">Doing that</li>
+                                <li class="list-group-item">Doing something else</li>
+                                <li class="list-group-item">And even other stuff</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <h1 id="testimonials">Testimonials</h1>
+        <h1 id="testimonials">Testimonials</h1>
 
-                <section id="content" class="content">
-                    <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
-                        <div class="col">
-                            <div class="card ">
-                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        <strong>A testimonial here</strong>
-                                    </h5>
-                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                                    <div class="card-footer">
-                                        <small class="text-muted">Jim Smith: February 2021</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card">
-                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        <strong>A second one here</strong>
-                                    </h5>
-                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                                    <div class="card-footer">
-                                        <small class="text-muted">John Smith: March 2021</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card">
-                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        <strong>And a third one here</strong>
-                                    </h5>
-                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                                    <div class="card-footer">
-                                        <small class="text-muted">Fred Smith: April 2021</small>
-                                    </div>
-                                </div>
+        <section id="content" class="content">
+            <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
+                <div class="col">
+                    <div class="card ">
+                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <strong>A testimonial here</strong>
+                            </h5>
+                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                            <div class="card-footer">
+                                <small class="text-muted">Jim Smith: February 2021</small>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <strong>A second one here</strong>
+                            </h5>
+                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                            <div class="card-footer">
+                                <small class="text-muted">John Smith: March 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <strong>And a third one here</strong>
+                            </h5>
+                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                            <div class="card-footer">
+                                <small class="text-muted">Fred Smith: April 2021</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                </section>
-
-  <!-- Site footer -->
-    <footer class="site-footer">
-      <div class="container">
+<!-- Site footer -->
+<footer class="site-footer">
+    <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <h6>About Us</h6>
-            <p class="text-justify">Stuff here</p>
-          </div>
+            <div class="col-sm-12 col-md-6">
+            <h6><strong>About Us</strong></h6>
+            <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+                <br><br>
+            It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
+            </div>
 
-          <div class="col-xs-6 col-md-3">
-            <h6>Categories</h6>
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Services</strong></h6>
             <ul class="footer-links">
-              <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-              <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-              <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-              <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-              <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-              <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+                <li><a href="services.html#domesticservices">Domestic Services</a></li>
+                <li><a href="services.html#corporateservices">Corporate Services</a></li>
+                <li><a href="services.html#generalservices">General Services</a></li>
             </ul>
-          </div>
+            </div>
 
-          <div class="col-xs-6 col-md-3">
-            <h6>Quick Links</h6>
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Quick Links</strong></h6>
             <ul class="footer-links">
-              <li><a href="http://scanfcode.com/about/">About Us</a></li>
-              <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-              <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-              <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-              <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-          </div>
+            </div>
         </div>
         <hr>
-      </div>
-      <div class="container">
+    </div>
+    <div class="container">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by Stuart Cox</p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
-            </ul>
-          </div>
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by Stuart Cox</p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
+                </ul>
+            </div>
         </div>
-      </div>
+    </div>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </footer>
 
-                <script src="scripts/scripts.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    </body>
+<script src="scripts/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
